# p1cli

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  main.py  mkdocs.yml  polars_example.py  polars_task.py  pyproject.toml  rolling_sum.py  solution.py
.github/workflows/: docs.yml  release.yml
artifacts/: REASONING.md  TODO.md
docs/: api.md  context.md  index.md  installation.md  usage.md
skill/p1cli/: SKILL.md
src/p1cli/: CONTEXT.p1cli  __init__.py  main.py
src/p1cli/p1cli-typescript/: README.p1cli
src/p1cli/p1cli_python/: CONTEXT.p1cli  README.p1cli  __init__.py  main.py
src/p1cli/p1cli_python/docstring/: CONTEXT.p1cli  __init__.py  main.py
src/p1cli/p1cli_python/signature/: CONTEXT.p1cli  __init__.py  main.py
tests/: test_main.py
tests/p1cli_python/: test_p1cli_python_main.py
